syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service OrderService {
  rpc CreateOrder(OrderRequest) returns (OrderResponse);
  
  rpc GetAllOrders(google.protobuf.Empty) returns (OrderList);
}

message OrderRequest {
  repeated OrderItem order_items = 1; 
  int32 user_id = 2; 
  int32 createdBy = 3; 
}

message OrderItem {
  int32 order_item_id = 1; 
  int32 item_id = 2; 
  int32 quantity_to_pick = 3; 
}

message OrderResponse {
  int32 order_id = 1; 
  repeated OrderItem order_items = 2; 
  int32 user_id = 3; 
  int32 created_by = 4; 
  google.protobuf.Timestamp created_at = 5;
}

message OrderList {
  repeated Order orders = 1;
} 
