syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "user-service.proto";
import "item-service.proto";
package orders;

option java_multiple_files = true;
option java_package = "com.javainuse.orders";


service OrderService {
  rpc createOrder(OrderRequest) returns (CreateOrderResponse);
  rpc getAllOrders(google.protobuf.Empty) returns (OrderList);
}
message CreateOrderResponse {
  bool success = 1;
}

message OrderRequest {
  repeated OrderItemDTO order_items = 1;
  google.protobuf.Timestamp delivery_date = 2;
  int32 created_by = 3;
}

message OrderItemDTO {
  items.Item item = 1;
  int32 quantity_to_pick = 2;
}

message OrderDTO {
  int32 order_id = 1;
  repeated OrderItemDTO order_items = 2;
  google.protobuf.Timestamp created_at = 3;
  string assigned_user = 4;
  string created_by_user = 5;
  OrderStatus order_status = 6;
  google.protobuf.Timestamp delivery_date = 7;
}

message OrderList {
  repeated OrderDTO orders = 1;
}

enum OrderStatus {
  COMPLETED = 0;
  IN_PROGRESS = 1;
}